# sevenz-rust2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: miri.yml  rust.yml
examples/: advance.rs  block_decompress.rs  compress.rs  decompress.rs  decompress_progress.rs  folder_decompress.rs  forder_dec.rs  mt_decompress.rs
lzma-rust/: Cargo.toml  README.md
lzma-rust/src/: decoder.rs  lib.rs  lzma2_reader.rs  lzma_reader.rs  range_dec.rs  state.rs
lzma-rust/src/enc/: encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma2_writer.rs  lzma_writer.rs  range_enc.rs
lzma-rust/src/lz/: bt4.rs  hc4.rs  lz_decoder.rs  lz_encoder.rs  mod.rs
lzma-rust2/: CHANGELOG.md  Cargo.toml  README.md
lzma-rust2/src/: decoder.rs  lib.rs  lzma2_reader.rs  lzma_reader.rs  range_dec.rs
lzma-rust2/src/enc/: counting.rs  encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma2_writer.rs  lzma_writer.rs  mod.rs  range_enc.rs
lzma-rust2/src/lz/: bt4.rs  hash234.rs  hc4.rs  lz_decoder.rs  lz_encoder.rs
ppmd-rust/: Cargo.toml  README.md
ppmd-rust/ppmd-sys/: .gitignore  Cargo.toml  README.md  build.rs
ppmd-rust/ppmd-sys/libppmd/: Ppmd7Dec.c
ppmd-rust/ppmd-sys/src/: bindings.rs  lib.rs
ppmd-rust/src/: byte_reader.rs  byte_writer.rs  decoder_7.rs  decoder_7a.rs  decoder_8.rs  encoder_7.rs  encoder_8.rs  lib.rs  memory.rs
ppmd-rust/src/internal/: mod.rs  ppmd7.rs
ppmd-rust/src/internal/ppmd7/: decoder.rs  encoder.rs  range_coding.rs
ppmd-rust/tests/: ppmd7.rs
src/: aes256sha256.rs  archive.rs  bitset.rs  block.rs  brotli.rs  codec.rs  de_funcs.rs  decoder.rs  decoders.rs  delta.rs  en_funcs.rs  encoder.rs  encoder_options.rs  encoders.rs  encryption.rs  error.rs  filter.rs  folder.rs  lib.rs  lz4.rs  method_options.rs  password.rs  reader.rs  time.rs  util.rs  wasm.rs  writer.rs
src/bcj/: arm.rs  mod.rs  x86.rs
src/codec/: brotli.rs  lz4.rs
src/encryption/: aes.rs  password.rs
src/filter/: bcj.rs  bcj2.rs  delta.rs
src/filter/bcj/: arm.rs  ppc.rs  x86.rs
src/filter/bcj2/: decode.rs
src/util/: compress.rs  decompress.rs  wasm.rs
src/writer/: counting.rs  counting_writer.rs  lazy_file_reader.rs  pack_info.rs  seq_reader.rs  source_reader.rs  unpack_info.rs
tests/: compress_tests.rs  decompress_encrypted_tests.rs  decompression_tests.rs  solid_compress_tests.rs
tests/resources/: aes_small_test.7z  decompress_example_bcj_arm64.7z  ipsum.txt  non_solid.7z  ppmd.7z  solid.7z  zstdmt-brotli.7z  zstdmt-lz4.7z
