[package]
description = "A 7z decompressor/compressor written in pure Rust"
edition = "2021"
homepage = "https://github.com/hasenbanck/sevenz-rust2"
keywords = ["7z", "7zip", "sevenz", "decompress"]
license = "Apache-2.0"
name = "sevenz-rust2"
readme = "README.md"
repository = "https://github.com/hasenbanck/sevenz-rust"
rust-version = "1.74.0"
version = "0.7.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["compress"]
aes256 = ["dep:aes", "dep:cbc", "dep:getrandom"]
bzip2 = ["dep:bzip2"]
compress = ["lzma-rust2/encoder"]
zstd = ["dep:zstd"]

[dependencies]
aes = { version = "0.8", optional = true }
bit-set = "0.8"
byteorder = "1.5"
bzip2 = { version = "0.5", optional = true }
getrandom = { version = "0.3", optional = true }
cbc = { version = "0.1", optional = true }
crc32fast = "1.4"
filetime_creation = "0.2"
lzma-rust2 = { path = "lzma-rust2", default-features = false, version = "0.1.7" }
nt-time = "0.10"
sha2 = { version = "^0.10" }
zstd = { version = "0.13", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
rand = { version = "0.9" }
tempfile = "3.17"

[[example]]
name = "compress"
required-features = ["compress", "aes256"]

[[example]]
name = "decompress"
required-features = ["compress", "aes256"]

[[example]]
name = "advance"
required-features = ["compress", "aes256"]
