[package]
description = "A 7z decompressor/compressor written in pure Rust"
edition = "2024"
homepage = "https://github.com/hasenbanck/sevenz-rust2"
keywords = ["7z", "7zip", "sevenz", "decompress"]
license = "Apache-2.0"
name = "sevenz-rust2"
readme = "README.md"
repository = "https://github.com/hasenbanck/sevenz-rust"
rust-version = "1.85"
version = "0.14.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["bzip2", "compress", "ppmd", "util"]
aes256 = ["dep:aes", "dep:cbc", "dep:getrandom", "dep:sha2"]
aes256_wasm = ["aes256", "getrandom/wasm_js"]
brotli = ["dep:brotli"]
bzip2 = ["dep:bzip2"]
compress = ["lzma-rust2/encoder"]
deflate = ["dep:flate2"]
lz4 = ["dep:lz4_flex"]
ppmd = ["dep:ppmd-rust"]
util = ["dep:filetime_creation"]
zstd = ["dep:zstd"]

[dependencies]
aes = { version = "0.8", optional = true }
bit-set = "0.8"
brotli = { version = ">= 7, < 9", default-features = false, optional = true, features = ["std"] }
byteorder = "1"
bzip2 = { version = "0.6", optional = true }
cbc = { version = "0.1", optional = true }
crc32fast = "1"
flate2 = { version = "1", optional = true, features = ["zlib-rs"] }
filetime_creation = { version = "0.2", optional = true }
getrandom = { version = "0.3", optional = true }
lzma-rust2 = { version = "0.2", default-features = false, path = "lzma-rust2" }
ppmd-rust = { version = "0.3", optional = true, path = "ppmd-rust" }
lz4_flex = { version = "0.11", optional = true }
nt-time = "0.11"
sha2 = { version = "0.10", optional = true }
zstd = { version = "0.13", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
rand = { version = "0.9" }
tempfile = "3"

[[example]]
name = "compress"
required-features = ["aes256", "compress", "util"]

[[example]]
name = "decompress"
required-features = ["aes256", "compress", "util"]

[[example]]
name = "advance"
required-features = ["aes256", "compress", "util"]

[workspace]
members = ["lzma-rust2", "ppmd-rust"]

[package.metadata.docs.rs]
features = ["aes256", "brotli", "bzip2", "compress", "deflate", "lz4", "util", "ppmd", "zstd"]
rustdoc-args = ["--cfg", "docsrs"]
