[package]
name = "ppmd-sys"
description = "PPMd bindings"
homepage = "https://github.com/hasenbanck/sevenz-rust2/tree/main/ppmd-rust/ppmd-sys"
repository = "https://github.com/hasenbanck/sevenz-rust2/tree/main/ppmd-rust/ppmd-sys"
edition = "2024"
rust-version = "1.85"
version = "0.2.0"
keywords = ["ppmd"]
license = "CC0-1.0"

[dependencies]

[build-dependencies]
cc = "1"
